--- a/biblio/auth.html
+++ b/biblio/auth.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Библио Апарте</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
                     <button type="submit"></button>
                   </form>
             </div>
-            <button class="btn_auth">Войти</button>
+            <a class="btn_auth" href="auth.html">Войти</a>
         </div>
        
     </header>
@@ -33,7 +33,7 @@
                     </div>
 
                 <input type="submit" value="Войти" class="btn-form">
-                        <p class="btn-form-text">Нет аккаунта? <a href="login.html">Зарегистрироваться</a></p>
+                        <p class="btn-form-text">Нет аккаунта? <a href="registr.html">Зарегистрироваться</a></p>
                 
             </form>
         </div>
