--- a/biblio/registr.html
+++ b/biblio/registr.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Библио Апарте</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
                     <button type="submit"></button>
                   </form>
             </div>
-            <button class="btn_auth">Войти</button>
+            <a class="btn_auth" href="auth.html">Войти</a>
         </div>
        
     </header>
@@ -30,8 +30,6 @@
                 <div class="form-container">
 
                     <div class="form-container-left">
-                        <!-- <img id="frame" src="" class="image-preview"/>
-                        <input type="file" id="file" accept="image/jpg, image/jpeg, image/png" onchange="preview()"> -->
 
                         <img id="frame" src="" class="image-preview"/>
                         <label class="input-file">
@@ -51,7 +49,7 @@
                 </div>
 
                 <input type="submit" value="Зарегистрироваться" class="btn-form">
-                        <p class="btn-form-text">У вас уже есть аккаунт? <a href="login.html">Войти</a></p>
+                        <p class="btn-form-text">У вас уже есть аккаунт? <a href="auth.html">Войти</a></p>
                 
             </form>
         </div>
