collection pages done

--- a/biblio/profile.html
+++ b/biblio/profile.html
@@ -66,7 +66,7 @@
                 <img class="arrow_1 rigth" id="right" src="img/arrow-rigth.png" alt="">
         </div>
         <div class="btn">
-            <a class="profile_bt_all" href="">Показать все</a>
+            <a class="profile_bt_all" href="profile_all_collections.html">Показать все</a>
         </div>
 
         <!-- Блок рецензий -->
@@ -484,7 +484,7 @@
 
     <footer>
         <div class="footer_main">
-            <div class="footer container">
+            <div class="footer">
                 <div class="footer_main_text">
                     <div class="footer_main_text_title">БиблиоАпарте</div>
                     <div class="footer_main_text_description">твоя карманная библиотека</div>
