collection pages update

--- a/biblio/profile_all_collections.html
+++ b/biblio/profile_all_collections.html
@@ -32,42 +32,67 @@
             <div class="list_collection">
                 <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
+                
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll2.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Пиратские истории</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll3.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Любимое фэнтези</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll4.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Чтиво на каждый день</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <button class="remove"> Удалить</button>
+                <div class="buttons">
+                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
         </div>       
     </main>
