--- a/biblio/index.html
+++ b/biblio/index.html
@@ -47,9 +47,11 @@
             <img class="arrow left" id="left" src="img/arrow_left.png" alt="">
             <div class="list_books">
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Мастер и Маргарита</div>
                         <div class="list_book_author">Булгаков М. А.</div>
+                    </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -62,11 +64,14 @@
                                 <div class="heart"></div>
                             </div>
                         </div>
+                        
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/BookThief.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Книжный вор</div>
                         <div class="list_book_author">Маркус З.</div>
+                    </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -81,9 +86,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/HowToSell.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Как правильно продавать, если ты интроверт...</div>
                         <div class="list_book_author">Меттью П.</div>
+                    </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -98,9 +105,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                    </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -115,9 +124,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -132,9 +143,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -149,9 +162,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                    </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -166,9 +181,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -183,9 +200,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                    </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -200,9 +219,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -225,9 +246,11 @@
             <img class="arrow left" id="left_1" src="img/arrow_left.png" alt="">
             <div class="list_books two">
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/happiness.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Сыворотка счастья</div>
                         <div class="list_book_author">Калинина Д.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -242,9 +265,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/birds.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Саги огненных птиц</div>
                         <div class="list_book_author">Ёрм А.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -257,11 +282,14 @@
                                 <div class="heart"></div>
                             </div>
                         </div>
+                        
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/dragon.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Как убить дракона</div>
                         <div class="list_book_author">Стивенсон К.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -276,9 +304,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/psih.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Психосоматика. Как распознать и обезвредить хронический стресс</div>
                         <div class="list_book_author">Кирмичи А.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -293,26 +323,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
-                        <div class="list_book_estimation">
-                            <div class="list_book_estimation_rating">
-                                <span class="active"></span>	
-                                <span class="active"></span>    
-                                <span></span>  
-                                <span></span>    
-                                <span></span>
-                            </div>
-                            <div class="list_book_estimation_like">
-                                <div class="heart"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list_book">
-                        <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
-                        <div class="list_book_name">Архитектура</div>
-                        <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -327,9 +342,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -344,9 +361,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -361,9 +380,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -378,9 +399,30 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
+                        <div class="list_book_estimation">
+                            <div class="list_book_estimation_rating">
+                                <span class="active"></span>	
+                                <span class="active"></span>    
+                                <span></span>  
+                                <span></span>    
+                                <span></span>
+                            </div>
+                            <div class="list_book_estimation_like">
+                                <div class="heart"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list_book">
+                        <a href="book.html">
+                        <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                        <div class="list_book_name">Архитектура</div>
+                        <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
