--- a/biblio/profile_collection.html
+++ b/biblio/profile_collection.html
@@ -28,9 +28,11 @@
         <div class="collection_description">Коллекция посвящена моим любимым книгам по психологии</div>
         <div class="collections">
             <div class="list_book">
+                <a href="book.html">
                 <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Архитектура</div>
                 <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
@@ -47,8 +49,10 @@
             </div>
             <div class="list_book">
                 <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
+                <a href="book.html">
                 <div class="list_book_name">Мастер и Маргарита</div>
                 <div class="list_book_author">Булгаков М. А.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
@@ -64,9 +68,11 @@
                 <button class="remove"> Удалить</button>
             </div>
             <div class="list_book">
+                <a href="book.html">
                 <img src="img/BookThief.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Книжный вор</div>
                 <div class="list_book_author">Маркус З.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
@@ -82,9 +88,11 @@
                 <button class="remove"> Удалить</button>
             </div>
             <div class="list_book">
+                <a href="book.html">
                 <img src="img/HowToSell.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Как правильно продавать, если ты интроверт...</div>
                 <div class="list_book_author">Меттью П.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
@@ -100,9 +108,11 @@
                 <button class="remove"> Удалить</button>
             </div>
             <div class="list_book">
+                <a href="book.html">
                 <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Архитектура</div>
                 <div class="list_book_author">Леонардо Д. В.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
@@ -118,9 +128,11 @@
                 <button class="remove"> Удалить</button>
             </div>
             <div class="list_book">
+                <a href="book.html">
                 <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Мастер и Маргарита</div>
                 <div class="list_book_author">Булгаков М. А.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
@@ -136,9 +148,11 @@
                 <button class="remove"> Удалить</button>
             </div>
             <div class="list_book">
+                <a href="book.html">
                 <img src="img/BookThief.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Книжный вор</div>
                 <div class="list_book_author">Маркус З.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
@@ -154,9 +168,11 @@
                 <button class="remove"> Удалить</button>
             </div>
             <div class="list_book">
+                <a href="book.html">
                 <img src="img/HowToSell.png" alt="Обложка" class="list_book_img">
                 <div class="list_book_name">Как правильно продавать, если ты интроверт...</div>
                 <div class="list_book_author">Меттью П.</div>
+                </a>
                 <div class="list_book_estimation">
                     <div class="list_book_estimation_rating">
                         <span class="active"></span>	
