--- a/biblio/profile.html
+++ b/biblio/profile.html
@@ -120,9 +120,11 @@
             <img class="arrow left" id="left_2" src="img/arrow_left.png" alt="">
             <div class="list_books three">
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Мастер и Маргарита</div>
                         <div class="list_book_author">Булгаков М. А.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -137,9 +139,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/BookThief.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Книжный вор</div>
                         <div class="list_book_author">Маркус З.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -154,9 +158,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/HowToSell.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Как правильно продавать, если ты интроверт...</div>
                         <div class="list_book_author">Меттью П.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -171,9 +177,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -188,9 +196,31 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
+                        <div class="list_book_estimation">
+                            <div class="list_book_estimation_rating">
+                                <span class="active"></span>	
+                                <span class="active"></span>    
+                                <span></span>  
+                                <span></span>    
+                                <span></span>
+                            </div>
+                            <div class="list_book_estimation_like">
+                                <div class="heart"></div>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
+                    <div class="list_book">
+                        <a href="book.html">
+                        <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                        <div class="list_book_name">Архитектура</div>
+                        <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -205,9 +235,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -222,9 +254,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -239,9 +273,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -256,26 +292,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
-                        <div class="list_book_estimation">
-                            <div class="list_book_estimation_rating">
-                                <span class="active"></span>	
-                                <span class="active"></span>    
-                                <span></span>  
-                                <span></span>    
-                                <span></span>
-                            </div>
-                            <div class="list_book_estimation_like">
-                                <div class="heart"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list_book">
-                        <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
-                        <div class="list_book_name">Архитектура</div>
-                        <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -304,9 +325,11 @@
             <img class="arrow left" id="left_3" src="img/arrow_left.png" alt="">
             <div class="list_books four">
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/happiness.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Сыворотка счастья</div>
                         <div class="list_book_author">Калинина Д.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -321,9 +344,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/birds.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Саги огненных птиц</div>
                         <div class="list_book_author">Ёрм А.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -338,9 +363,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/dragon.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Как убить дракона</div>
                         <div class="list_book_author">Стивенсон К.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -355,9 +382,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/psih.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Психосоматика. Как распознать и обезвредить хронический стресс</div>
                         <div class="list_book_author">Кирмичи А.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -372,26 +401,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
-                        <div class="list_book_estimation">
-                            <div class="list_book_estimation_rating">
-                                <span class="active"></span>	
-                                <span class="active"></span>    
-                                <span></span>  
-                                <span></span>    
-                                <span></span>
-                            </div>
-                            <div class="list_book_estimation_like">
-                                <div class="heart fill-color"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list_book">
-                        <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
-                        <div class="list_book_name">Архитектура</div>
-                        <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -406,9 +420,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -423,9 +439,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -440,9 +458,11 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -457,9 +477,30 @@
                         </div>
                     </div>
                     <div class="list_book">
+                        <a href="book.html">
                         <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
                         <div class="list_book_name">Архитектура</div>
                         <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
+                        <div class="list_book_estimation">
+                            <div class="list_book_estimation_rating">
+                                <span class="active"></span>	
+                                <span class="active"></span>    
+                                <span></span>  
+                                <span></span>    
+                                <span></span>
+                            </div>
+                            <div class="list_book_estimation_like">
+                                <div class="heart fill-color"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list_book">
+                        <a href="book.html">
+                        <img src="img/Architecture.png" alt="Обложка" class="list_book_img">
+                        <div class="list_book_name">Архитектура</div>
+                        <div class="list_book_author">Леонардо Д. В.</div>
+                        </a>
                         <div class="list_book_estimation">
                             <div class="list_book_estimation_rating">
                                 <span class="active"></span>	
@@ -483,7 +524,7 @@
     </main>
 
     <footer>
-        <div class="footer_main">
+        <div class="footer_main container">
             <div class="footer">
                 <div class="footer_main_text">
                     <div class="footer_main_text_title">БиблиоАпарте</div>
